tdf#107608: PPTX: Import pattern fill background color

Reviewed-on: https://gerrit.libreoffice.org/48633
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
(cherry picked from commit 232251e11aecf051bc0e2a915e5af6c0d3650469)

Change-Id: Ic7e9dc314c961605fc8467eebd465fa286993e17